--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,17 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    tidyverse
 Config/testthat/edition: 3
 Imports: 
     stats
-VignetteBuilder: knitr
+VignetteBuilder:
+    knitr,
+    tidyverse
+Depends: 
+    R (>= 2.10)
