1. added (abstract) S3 class `mdl` 2. added some S3 generic and helping functions 3. added S3 class `gaussian_mdl` (subclass of `mdl`), requires package `mvtnorm` 4. added sleep data from Ying Chen 5. (WIP) adding S3 class `mixture_mdl` 6. fixed all warnings and notes, now `devtools::check()` run is successful

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Suggests:
     testthat (>= 3.0.0),
     tidyverse
 Config/testthat/edition: 3
-Imports: 
+Imports:
+    mvtnorm,
     stats
 VignetteBuilder:
     knitr,
